moved elm files to client folder

--- a/client/index.html
+++ b/client/index.html
@@ -5193,7 +5193,7 @@ var $author$project$Main$view = function (_v0) {
 		_List_Nil,
 		_List_fromArray(
 			[
-				$elm$html$Html$text('Hello world!')
+				$elm$html$Html$text('Notes')
 			]));
 };
 var $author$project$Main$main = $elm$browser$Browser$sandbox(
